tests/invalid/trait/method_call_explicit_ufcs_enum_constructor_receiver_safety_gate.facet
enum Job {
  Ready(unrestricted isize)
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (<unrestricted Job as Runner>::run Job::Ready(1))
}
